--- a/index.html
+++ b/index.html
@@ -1,28 +1,59 @@
 <!DOCTYPE html>
 <html lang="fr">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    
-  <title>Bac à sable</title>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
-  <!-- <link href="./assets/bootstrap.css" rel="stylesheet"> -->
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
-  <link href="./style.css" rel="stylesheet">
-</head>
+    <title>Bac à sable</title>
 
-<body>
+    <!-- <link href="./assets/bootstrap.css" rel="stylesheet"> -->
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
+    />
+    <link href="./style.css" rel="stylesheet" />
+  </head>
 
+  <body>
+    <!-- pour utiliser rellax, on l'insère dans les balises classe (voir ci-bàs) -->
 
-   
+    <div class="header-pic rellax" data-rellax-speed="-9">
+      <h1 class="rellax" data-rellax-speed="7">Partez à l'aventue</h1>
+    </div>
 
+    <div class="main-pic rellax" data-rellax-speed="-3">
+      <h2 class="rellax" data-rellax-speed="5">A partir de 550$</h2>
+    </div>
 
-  <script src="./assets/jquery.min.js" type="text/javascript" ></script>
-  <script src="./assets/bootstrap.js" type="text/javascript" ></script>
-  <script src="./script.js" type="text/javascript" ></script>
-</body>
+    <div class="footer rellax" data-rellax-speed="0">
+      <p>
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dignissimos
+        tempora eum ipsam alias beatae sint est, rem molestias a, aliquid
+        doloremque iusto consequuntur dicta totam. Quidem, recusandae. Corporis,
+        soluta eius.
+      </p>
+      <br />
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi ipsa
+        omnis nostrum accusamus unde, saepe minima cum explicabo, nam voluptate
+        officia laborum laboriosam sunt quos in distinctio itaque a quod?
+      </p>
+      <br />
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore autem
+        maxime corporis hic distinctio officia doloremque ea eaque architecto
+        obcaecati nam vel ex harum repellat voluptatem, quod saepe. Ipsam,
+        quasi!
+      </p>
+      <br />
+    </div>
 
+    <!-- ici on insère entre balise script le Parallax (pour lecture du code parallax) -->
 
-
+    <script src="./node_modules/rellax/rellax.min.js"></script>
+    <script src="./assets/jquery.min.js" type="text/javascript"></script>
+    <script src="./assets/bootstrap.js" type="text/javascript"></script>
+    <script src="./script.js" type="text/javascript"></script>
+  </body>
 </html>
